<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fragment Login -->
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="text_button_login">Login</string>
    <string name="text_button_register">Criar Conta</string>
    <string name="hint_email">digite seu e-mail</string>
    <string name="hint_password">digite sua senha</string>

    <!-- Fragment recover account -->
    <string name="information_recover_account">Informe seu email de cadastro para recuperação da conta</string>
    <string name="txt_btn_recover_account">Recuperar Conta</string>
    <string name="txt_message_recover_account">solicitação de recuperação enviada, verifique seu e-mail</string>
    <string name="txt_message_email_not_found">E-mail não cadastrado, verifique e tente novamente</string>

    <!-- Status Tabs -->
    <!--    Form Task Fragment-->
    <string name="txt_new_task">Nova Tarefa</string>
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="txt_description">Descrição</string>
    <string name="txt_status">Status</string>
    <string name="hint_description">Criar nova tela de login</string>
    <string name="txt_btn_save">Salvar</string>
    <string name="txt_save_task">Tarefa Salva com sucesso!</string>
    <string name="txt_update_task">Tarefa Atualizada com sucesso!</string>
    <string name="txt_toolbar_update_task">Edição de Tarefa</string>

    <!-- Generic -->
    <string name="txt_title_warning">Atenção</string>
    <string name="txt_button_confirmation_warning">ENTENDI</string>
    <string name="txt_button_cancel_warning">CANCELAR</string>
    <string name="txt_email_empty">Preencha seu E-mail</string>
    <string name="txt_password_empty">Preencha sua Senha</string>
    <string name="txt_description_empty">Preencha a Descrição</string>
    <string name="txt_error_save_task">Erro!, por favor tente mais tarde</string>
    <string name="txt_error_generic">Erro desconhecido, tente novamente</string>
    <string name="txt_list_tasks_empty">Nenhuma Tarefa Cadastrada</string>
    <string name="txt_load_tasks">Carregando Tarefas, aguarde...</string>
    <string name="txt_delete_tasks_success">Tarefa deletada com sucesso.</string>
    <string name="txt_delete_tasks_error">Erro! Tarefa não deletada</string>

    <!-- errors Firebase Authentication -->
    <string name="txt_account_not_registered_register_fragment">Error! Credenciais inválida, verifique email ou senha.</string>
    <string name="txt_invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="txt_invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="txt_email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="txt_strong_password_register_fragment">Insira uma senha mais forte.</string>





    <!-- Register message -->
    <string name="txt_create_account">Criar Conta</string>
    <string name="txt_email_required">E-mail é obrigátorio</string>
    <string name="txt_password_required">Senha é obrigátoria</string>
    <string name="txt_recover_account">Recuperação de Conta</string>
    <string name="txt_completed">Concluída</string>
    <string name="txt_doing">Fazendo</string>
    <string name="txt_to_do">A Fazer</string>
    <string name="txt_add_new_task">Adicionar Nova tarefa</string>



    <!--    bottom sheet dialog-->
    <string name="txt_title_dialog_logout">Deseja Sair do App?</string>
    <string name="txt_confirm_delete_tasks">Atenção:Você não poderá mais recuperar a tarefa após a remoção.</string>
    <string name="txt_info_delete_tasks">Deleja realmente deletar a tarefa?</string>
    <string name="txt_button_dialog_confirmation">Confirmar</string>
    <string name="txt_button_dialog_cancel_logout">Cancelar</string>
    <string name="txt_message_dialog_logout">Clique em confirmar para deslogar do App ou Cancelar</string>

</resources>