<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textEditText"
            android:text="@string/text_email"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/editTextTheme"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textEditText"
            android:text="@string/text_password"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/editTextTheme"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login"
            style="@style/ButtonTheme"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            app:backgroundTint="@null"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <TextView
                android:id="@+id/btnCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_create_account"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btnRecoverAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_recover_account"
                android:textAlignment="textEnd"
                android:textColor="@color/white"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:visibility="visible"
            android:indeterminateTint="@color/white"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>