<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context=".ui.FormTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_default">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back">


                <TextView
                    android:id="@+id/txt_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/txt_new_task"
                    android:textColor="@color/white" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtDescription"
                style="@style/textEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_description"
                android:textColor="@color/white"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                style="@style/editTextTheme"
                android:hint="@string/hint_description"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDescription"
                android:autofillHints="nome da tarefa" />

            <TextView
                android:id="@+id/textStatus"
                style="@style/descriptionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_status"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDescription" />

            <RadioGroup
                android:id="@+id/rgStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/textStatus">


                <RadioButton
                    android:id="@+id/rbTodo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:buttonTint="@color/white"
                    android:backgroundTint="@color/white"
                    android:checked="true"
                    android:text="@string/txt_to_do"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbDoing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:buttonTint="@color/white"
                    android:text="@string/txt_doing"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:buttonTint="@color/white"
                    android:text="@string/txt_completed"
                    android:textColor="@color/white" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/ButtonTheme"
                app:backgroundTint="@null"
                android:text="@string/txt_btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgStatus" />

            <ProgressBar
                android:id="@+id/progressBarFormTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/white"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSave"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</ScrollView>